examples/avm-res-web-site/0.23.0/submodules/config_authsettingsv2/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# config\_authsettingsv2 submodule

This submodule manages the authentication settings V2 configuration (`Microsoft.Web/sites/config`, name: `authsettingsV2`) for an Azure App Service site.

It can be used independently to configure authentication (v2) settings on an existing site.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.9)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.12)

## Resources

The following resources are used by this module:

- [azapi_update_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the App Service site.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_auth_enabled"></a> [auth\_enabled](#input\_auth\_enabled)

Description: Is authentication enabled? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_config_file_path"></a> [config\_file\_path](#input\_config\_file\_path)

Description: The path to the auth configuration file.

Type: `string`

Default: `null`

### <a name="input_excluded_paths"></a> [excluded\_paths](#input\_excluded\_paths)

Description: A list of paths excluded from authentication.

Type: `list(string)`

Default: `null`

### <a name="input_forward_proxy_convention"></a> [forward\_proxy\_convention](#input\_forward\_proxy\_convention)

Description: The convention for forwarding proxy headers. Defaults to `NoProxy`.

Type: `string`

Default: `"NoProxy"`

### <a name="input_forward_proxy_custom_host_header_name"></a> [forward\_proxy\_custom\_host\_header\_name](#input\_forward\_proxy\_custom\_host\_header\_name)

Description: The custom host header name for the forward proxy.

Type: `string`

Default: `null`

### <a name="input_forward_proxy_custom_proto_header_name"></a> [forward\_proxy\_custom\_proto\_header\_name](#input\_forward\_proxy\_custom\_proto\_header\_name)

Description: The custom proto header name for the forward proxy.

Type: `string`

Default: `null`

### <a name="input_http_route_api_prefix"></a> [http\_route\_api\_prefix](#input\_http\_route\_api\_prefix)

Description: The prefix for the HTTP route API. Defaults to `/.auth`.

Type: `string`

Default: `"/.auth"`

### <a name="input_identity_providers"></a> [identity\_providers](#input\_identity\_providers)

Description: The identity providers configuration for authentication. This mirrors the API structure of `identityProviders`.

- `apple` - (Optional) The Apple provider configuration.
  - `enabled` - (Optional) Whether the Apple provider is enabled.
  - `login` - (Optional) The login configuration.
    - `scopes` - (Optional) A list of scopes.
  - `registration` - (Optional) The registration configuration.
    - `client_id` - (Optional) The Client ID.
    - `client_secret_setting_name` - (Optional) The app setting name containing the client secret.
- `azure_active_directory` - (Optional) The Azure Active Directory provider configuration.
  - `enabled` - (Optional) Whether the Azure AD provider is enabled.
  - `is_auto_provisioned` - (Optional) Whether the Azure AD configuration was auto-provisioned.
  - `login` - (Optional) The login configuration.
    - `disable_www_authenticate` - (Optional) Whether to disable WWW-Authenticate.
    - `login_parameters` - (Optional) Login parameters as a list of "key=value" strings.
  - `registration` - (Optional) The registration configuration.
    - `client_id` - (Optional) The Client ID.
    - `client_secret_certificate_issuer` - (Optional) The certificate issuer for the client secret.
    - `client_secret_certificate_subject_alternative_name` - (Optional) The certificate subject alternative name.
    - `client_secret_certificate_thumbprint` - (Optional) The certificate thumbprint for the client secret.
    - `client_secret_setting_name` - (Optional) The app setting name containing the client secret.
    - `open_id_issuer` - (Optional) The OpenID Connect issuer URI.
  - `validation` - (Optional) The validation configuration.
    - `allowed_audiences` - (Optional) A list of allowed audiences.
    - `default_authorization_policy` - (Optional) The default authorization policy.
      - `allowed_applications` - (Optional) A list of allowed applications.
      - `allowed_principals` - (Optional) The allowed principals.
        - `groups` - (Optional) A list of allowed groups.
        - `identities` - (Optional) A list of allowed identities.
    - `jwt_claim_checks` - (Optional) JWT claim check configuration.
      - `allowed_client_applications` - (Optional) A list of allowed client applications.
      - `allowed_groups` - (Optional) A list of allowed groups.
- `azure_static_web_apps` - (Optional) The Azure Static Web Apps provider configuration.
  - `enabled` - (Optional) Whether the provider is enabled.
  - `registration` - (Optional) The registration configuration.
    - `client_id` - (Optional) The Client ID.
- `custom_open_id_connect_providers` - (Optional) A map of custom OpenID Connect providers.
  - `enabled` - (Optional) Whether the provider is enabled.
  - `login` - (Optional) The login configuration.
    - `name_claim_type` - (Optional) The name claim type.
    - `scopes` - (Optional) A list of scopes.
  - `registration` - (Optional) The registration configuration.
    - `client_id` - (Optional) The Client ID.
    - `client_credential` - (Optional) The client credential configuration.
      - `method` - (Optional) The client credential method.
      - `client_secret_setting_name` - (Optional) The app setting name containing the client secret.
    - `open_id_connect_configuration` - (Optional) The OpenID Connect configuration.
      - `authorization_endpoint` - (Optional) The authorization endpoint.
      - `certification_uri` - (Optional) The certification URI.
      - `issuer` - (Optional) The issuer endpoint.
      - `token_endpoint` - (Optional) The token endpoint.
      - `well_known_open_id_configuration` - (Optional) The well-known OpenID configuration endpoint.
- `facebook` - (Optional) The Facebook provider configuration.
  - `enabled` - (Optional) Whether the provider is enabled.
  - `graph_api_version` - (Optional) The Graph API version.
  - `login` - (Optional) The login configuration.
    - `scopes` - (Optional) A list of scopes.
  - `registration` - (Optional) The registration configuration.
    - `app_id` - (Optional) The App ID.
    - `app_secret_setting_name` - (Optional) The app setting name containing the app secret.
- `github` - (Optional) The GitHub provider configuration.
  - `enabled` - (Optional) Whether the provider is enabled.
  - `login` - (Optional) The login configuration.
    - `scopes` - (Optional) A list of scopes.
  - `registration` - (Optional) The registration configuration.
    - `client_id` - (Optional) The Client ID.
    - `client_secret_setting_name` - (Optional) The app setting name containing the client secret.
- `google` - (Optional) The Google provider configuration.
  - `enabled` - (Optional) Whether the provider is enabled.
  - `login` - (Optional) The login configuration.
    - `scopes` - (Optional) A list of scopes.
  - `registration` - (Optional) The registration configuration.
    - `client_id` - (Optional) The Client ID.
    - `client_secret_setting_name` - (Optional) The app setting name containing the client secret.
  - `validation` - (Optional) The validation configuration.
    - `allowed_audiences` - (Optional) A list of allowed audiences.
- `legacy_microsoft_account` - (Optional) The legacy Microsoft Account provider configuration.
  - `enabled` - (Optional) Whether the provider is enabled.
  - `login` - (Optional) The login configuration.
    - `scopes` - (Optional) A list of scopes.
  - `registration` - (Optional) The registration configuration.
    - `client_id` - (Optional) The Client ID.
    - `client_secret_setting_name` - (Optional) The app setting name containing the client secret.
  - `validation` - (Optional) The validation configuration.
    - `allowed_audiences` - (Optional) A list of allowed audiences.
- `twitter` - (Optional) The Twitter provider configuration.
  - `enabled` - (Optional) Whether the provider is enabled.
  - `registration` - (Optional) The registration configuration.
    - `consumer_key` - (Optional) The consumer key.
    - `consumer_secret_setting_name` - (Optional) The app setting name containing the consumer secret.

Type:

```hcl
object({
    apple = optional(object({
      enabled = optional(bool)
      login = optional(object({
        scopes = optional(list(string))
      }))
      registration = optional(object({
        client_id                  = optional(string)
        client_secret_setting_name = optional(string)
      }))
    }))
    azure_active_directory = optional(object({
      enabled             = optional(bool)
      is_auto_provisioned = optional(bool)
      login = optional(object({
        disable_www_authenticate = optional(bool)
        login_parameters         = optional(list(string))
      }))
      registration = optional(object({
        client_id                                          = optional(string)
        client_secret_certificate_issuer                   = optional(string)
        client_secret_certificate_subject_alternative_name = optional(string)
        client_secret_certificate_thumbprint               = optional(string)
        client_secret_setting_name                         = optional(string)
        open_id_issuer                                     = optional(string)
      }))
      validation = optional(object({
        allowed_audiences = optional(list(string))
        default_authorization_policy = optional(object({
          allowed_applications = optional(list(string))
          allowed_principals = optional(object({
            groups     = optional(list(string))
            identities = optional(list(string))
          }))
        }))
        jwt_claim_checks = optional(object({
          allowed_client_applications = optional(list(string))
          allowed_groups              = optional(list(string))
        }))
      }))
    }))
    azure_static_web_apps = optional(object({
      enabled = optional(bool)
      registration = optional(object({
        client_id = optional(string)
      }))
    }))
    custom_open_id_connect_providers = optional(map(object({
      enabled = optional(bool)
      login = optional(object({
        name_claim_type = optional(string)
        scopes          = optional(list(string))
      }))
      registration = optional(object({
        client_id = optional(string)
        client_credential = optional(object({
          method                     = optional(string)
          client_secret_setting_name = optional(string)
        }))
        open_id_connect_configuration = optional(object({
          authorization_endpoint           = optional(string)
          certification_uri                = optional(string)
          issuer                           = optional(string)
          token_endpoint                   = optional(string)
          well_known_open_id_configuration = optional(string)
        }))
      }))
    })))
    facebook = optional(object({
      enabled           = optional(bool)
      graph_api_version = optional(string)
      login = optional(object({
        scopes = optional(list(string))
      }))
      registration = optional(object({
        app_id                  = optional(string)
        app_secret_setting_name = optional(string)
      }))
    }))
    github = optional(object({
      enabled = optional(bool)
      login = optional(object({
        scopes = optional(list(string))
      }))
      registration = optional(object({
        client_id                  = optional(string)
        client_secret_setting_name = optional(string)
      }))
    }))
    google = optional(object({
      enabled = optional(bool)
      login = optional(object({
        scopes = optional(list(string))
      }))
      registration = optional(object({
        client_id                  = optional(string)
        client_secret_setting_name = optional(string)
      }))
      validation = optional(object({
        allowed_audiences = optional(list(string))
      }))
    }))
    legacy_microsoft_account = optional(object({
      enabled = optional(bool)
      login = optional(object({
        scopes = optional(list(string))
      }))
      registration = optional(object({
        client_id                  = optional(string)
        client_secret_setting_name = optional(string)
      }))
      validation = optional(object({
        allowed_audiences = optional(list(string))
      }))
    }))
    twitter = optional(object({
      enabled = optional(bool)
      registration = optional(object({
        consumer_key                 = optional(string)
        consumer_secret_setting_name = optional(string)
      }))
    }))
  })
```

Default: `null`

### <a name="input_ignore_body_changes"></a> [ignore\_body\_changes](#input\_ignore\_body\_changes)

Description: Body-relative paths whose changes are ignored, keyed by AzAPI resource type. Paths use dot notation, and a change takes effect only after an apply.

The AzAPI provider exposes `ignore_body_changes` on `azapi_resource` only, and this module manages its resource with a type that does not accept the argument. The variable exists for interface consistency; setting a non-empty value fails the plan with an explicit error rather than being silently ignored.
- `web_sites_config` - Paths ignored on the v2 auth settings.

Type:

```hcl
object({
    web_sites_config = optional(list(string), [])
  })
```

Default: `{}`

### <a name="input_login"></a> [login](#input\_login)

Description: Login configuration for auth settings V2. Mirrors the API structure of `login`.

- `allowed_external_redirect_urls` - (Optional) A list of allowed external redirect URLs.
- `cookie_expiration` - (Optional) The cookie expiration configuration.
  - `convention` - (Optional) The cookie expiration convention. Defaults to `FixedTime`.
  - `time_to_expiration` - (Optional) The time after request when the session cookie should expire. Defaults to `08:00:00`.
- `nonce` - (Optional) The nonce configuration.
  - `nonce_expiration_interval` - (Optional) The time after request when the nonce should expire. Defaults to `00:05:00`.
  - `validate_nonce` - (Optional) Should the nonce be validated? Defaults to `true`.
- `preserve_url_fragments_for_logins` - (Optional) Should URL fragments be preserved for logins? Defaults to `false`.
- `routes` - (Optional) The login routes configuration.
  - `logout_endpoint` - (Optional) The logout endpoint.
- `token_store` - (Optional) The token store configuration.
  - `azure_blob_storage` - (Optional) The Azure Blob Storage token store configuration.
    - `sas_url_setting_name` - (Optional) The app setting name containing the SAS URL.
  - `enabled` - (Optional) Should the token store be enabled? Defaults to `false`.
  - `file_system` - (Optional) The file system token store configuration.
    - `directory` - (Optional) The directory for token storage.
  - `token_refresh_extension_hours` - (Optional) Hours after session token expiry for refresh. Defaults to `72`.

Type:

```hcl
object({
    allowed_external_redirect_urls = optional(list(string))
    cookie_expiration = optional(object({
      convention         = optional(string, "FixedTime")
      time_to_expiration = optional(string, "08:00:00")
    }))
    nonce = optional(object({
      nonce_expiration_interval = optional(string, "00:05:00")
      validate_nonce            = optional(bool, true)
    }))
    preserve_url_fragments_for_logins = optional(bool, false)
    routes = optional(object({
      logout_endpoint = optional(string)
    }))
    token_store = optional(object({
      azure_blob_storage = optional(object({
        sas_url_setting_name = optional(string)
      }))
      enabled = optional(bool, false)
      file_system = optional(object({
        directory = optional(string)
      }))
      token_refresh_extension_hours = optional(number, 72)
    }))
  })
```

Default: `null`

### <a name="input_redirect_to_provider"></a> [redirect\_to\_provider](#input\_redirect\_to\_provider)

Description: The default authentication provider to use when multiple providers are configured.

Type: `string`

Default: `null`

### <a name="input_require_authentication"></a> [require\_authentication](#input\_require\_authentication)

Description: Should authentication be required? Defaults to `false`.

Type: `bool`

Default: `false`

### <a name="input_require_https"></a> [require\_https](#input\_require\_https)

Description: Should HTTPS be required? Defaults to `true`.

Type: `bool`

Default: `true`

### <a name="input_resource_types"></a> [resource\_types](#input\_resource\_types)

Description: AzAPI resource types and API versions used by this module.

- `web_sites_config` - Resource type and API version for the v2 auth settings.

Type:

```hcl
object({
    web_sites_config = optional(string, "Microsoft.Web/sites/config@2025-03-01")
  })
```

Default: `{}`

### <a name="input_retry"></a> [retry](#input\_retry)

Description: Retry configuration for the AzAPI resources declared by this module. Defaults to retrying the conflict Azure returns while another operation on the site is in progress.

- `error_message_regex` - (Optional) A list of regular expressions matched against error messages. A match triggers a retry.
- `interval_seconds` - (Optional) The initial interval in seconds between retries.
- `max_interval_seconds` - (Optional) The maximum interval in seconds between retries.

Type:

```hcl
object({
    error_message_regex  = optional(list(string), ["Cannot modify this site because another operation is in progress"])
    interval_seconds     = optional(number, 10)
    max_interval_seconds = optional(number)
  })
```

Default: `{}`

### <a name="input_runtime_version"></a> [runtime\_version](#input\_runtime\_version)

Description: The runtime version of the auth module. Defaults to `~1`.

Type: `string`

Default: `"~1"`

### <a name="input_timeouts"></a> [timeouts](#input\_timeouts)

Description: Per-operation timeouts applied to the AzAPI resources declared by this module. Defaults to `null`, which uses the provider defaults. Each value is a Go duration string such as `30m`.

- `create` - (Optional) Timeout for create operations.
- `delete` - (Optional) Timeout for delete operations.
- `read` - (Optional) Timeout for read operations.
- `update` - (Optional) Timeout for update operations.

Type:

```hcl
object({
    create = optional(string)
    delete = optional(string)
    read   = optional(string)
    update = optional(string)
  })
```

Default: `null`

### <a name="input_unauthenticated_client_action"></a> [unauthenticated\_client\_action](#input\_unauthenticated\_client\_action)

Description: The action for unauthenticated requests. Defaults to `RedirectToLoginPage`.

Type: `string`

Default: `"RedirectToLoginPage"`

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the config resource.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the config resource.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
